fix(ui): Fixing free-to-use mobile UI issue
This was rendering with a huge gap inbetween the text and the amount.

Resolves #3263

--- a/interface/src/pages/transactions.module.scss
+++ b/interface/src/pages/transactions.module.scss
@@ -56,6 +56,7 @@
 // Mobile-only balance row in the top navigation.
 .balanceRow {
   width: 100vw;
+  max-width: 100vw;
   display: flex;
   justify-content: space-evenly;
 
